--- a/STM32H743_Bootloader/STM32H743_Bootloader.ioc
+++ b/STM32H743_Bootloader/STM32H743_Bootloader.ioc
@@ -15,11 +15,12 @@ Mcu.IP4=USART3
 Mcu.IPNb=5
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PB0
-Mcu.Pin1=PD8
-Mcu.Pin2=PD9
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin0=PC13
+Mcu.Pin1=PB0
+Mcu.Pin2=PD8
+Mcu.Pin3=PD9
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -38,6 +39,8 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PD8.Locked=true
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
@@ -65,8 +68,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=STM32H743.ioc
-ProjectManager.ProjectName=STM32H743
+ProjectManager.ProjectFileName=STM32H743_Bootloader.ioc
+ProjectManager.ProjectName=STM32H743_Bootloader
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -75,7 +78,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=64500000
 RCC.AHB12Freq_Value=32000000
 RCC.AHB4Freq_Value=32000000
