tried making a hex parser

--- a/STM32H743_Bootloader/STM32H743_Bootloader.ioc
+++ b/STM32H743_Bootloader/STM32H743_Bootloader.ioc
@@ -36,6 +36,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PB0.Locked=true
 PB0.Signal=GPIO_Output
